[package]
name = "runar_test_utils"
version = "0.1.0"
edition = "2021"
description = "Test utilities for Runar crates"
authors = ["Runar Team"]
license = "MIT"
repository = "https://github.com/runar-labs/runar-rust"
homepage = "https://github.com/runar-labs/runar-rust"
documentation = "https://docs.rs/runar_test_utils"
readme = "README.md"
rust-version = "1.70"

[dependencies]
anyhow = "1.0"
runar_common = { path = "../runar-common" }
runar-keys = { path = "../runar-keys" }
runar_node = { path = "../runar-node" }
runar-serializer = { path = "../runar-serializer" }
runar_transporter = { path = "../runar-transporter" }
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.28", features = ["full"] }
uuid = { version = "1.3", features = ["v4"] }
rand = "0.8" 

[dev-dependencies]
tokio-test = "0.4"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "aarch64-pc-windows-msvc",
]
