[package]
name = "runar-transport-tests"
version = "0.1.0"
edition = "2021"
description = "Interop QUIC client/server for Swift↔Rust E2E tests"

[lib]
name = "runar_transport_tests"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.4", features = ["derive"] }
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_cbor = "0.11"
uuid = { version = "1.3", features = ["v4"] }
runar_node = { path = "../runar-node" }
runar_common = { path = "../runar-common" }
runar-serializer = { path = "../runar-serializer" }
runar-keys = { path = "../runar-keys" }
runar-schemas = { path = "../runar-schemas" }
runar_macros_common = { path = "../runar-macros-common" }
runar_transporter = { path = "../runar-transporter" }
rustls-pki-types = "1.12.0"
rustls-pemfile = "1.0.3"
serde_json = "1.0"
env_logger = "0.11"
log = "0.4"

[[bin]]
name = "quic_interop_server"
path = "src/bin/quic_interop_server.rs"

[[bin]]
name = "quic_interop_client"
path = "src/bin/quic_interop_client.rs"


