[package]
name = "runar-ts-ffi"
version = "0.1.0"
edition = "2021"
authors = ["Runar Team"]
license = "MIT"
description = "Node.js/Bun FFI bindings for Runar using napi-rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
# N-API bindings for Rust
napi = { version = "2.16.0", features = ["tokio_rt", "serde-json"] }
napi-derive = "2.16.0"

# Local Runar crates
runar_node = { path = "../runar-node" }
runar_common = { path = "../runar-common" }

# Utilities
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }
anyhow = { workspace = true }
async-trait = { workspace = true }

# Tokio is required by napi's tokio_rt feature but we leverage workspace version
# It will be satisfied by workspace dependency resolution. 