[package]
name = "runar-examples"
version = "0.1.0"
edition = "2021"
description = "Examples for Runar"
license = "MIT"

[dependencies]
anyhow = "1.0"
runar_common = "0.1"
runar-keys = { path = "../runar-keys" }
runar_node = { path = "../runar-node" }
runar-serializer = { path = "../runar-serializer" }
runar_test_utils = { path = "../runar-test-utils" }
runar_macros = { path = "../runar-macros" }
runar_macros_common = { path = "../runar-macros-common" }
runar-schemas = { path = "../runar-schemas" }
runar-services = { path = "../runar-services" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
bincode = "1.3"
uuid = { version = "1.0", features = ["v4"] }
ctor = "0.2"

[[example]]
name = "simple"
path = "simple/src/main.rs"

[[example]]
name = "micro_services_demo"
path = "micro_services_demo/src/main.rs"