[package]
name = "runar_utils"
version = "0.1.0"
edition = "2021"
description = "Utility macros and functions for the Runar system"
authors = ["Runar Team"]
license = "MIT"

[dependencies]
runar_common = { path = "../rust-common" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
