[package]
name = "micro_services_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
async-trait = "0.1"
ctor = "0.2"

runar_common = { path = "../../runar-common" }
runar_macros = { path = "../../runar-macros" }
runar_node = { path = "../../runar-node" }
runar_test_utils = { path = "../../runar_test_utils" }
runar-serializer = { path = "../../runar-serializer" }
runar_macros_common = { path = "../../runar-macros-common" }
runar-keys = { path = "../../runar-keys" }
runar-schemas = { path = "../../runar-schemas" }
runar_services = { path = "../../runar-services" }
prost = { version = "0.12", default-features = false, features = ["std", "derive"] }
