[package]
name = "simple"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
runar_node = { path = "../../runar-node" }
runar_macros = { path = "../../runar-macros" }
runar_common = { path = "../../runar-common" }
runar_test_utils = { path = "../../runar_test_utils" }
async-trait = "0.1"
runar-serializer = { path = "../../runar-serializer" }
runar_macros_common = { path = "../../runar-macros-common" }
runar-schemas = { path = "../../runar-schemas" }
serde_json = "1.0"
